@@ -1,3 +1,7 @@
+2010-09-22  1.0-r16  Sauce Labs <help@saucelabs.com>
+
+	* Added --debug-ssh option.
+
 2010-09-21  1.0-r15  Sauce Labs <help@saucelabs.com>
 
     * Sauce Tunnel is now Sauce Connect!
